# spack-infrastructure

./: .editorconfig  .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  requirements.txt
.github/: dependabot.yml  images.yml  spack_ci_bridge.cmake
.github/ISSUE_TEMPLATE/: runner_registration.yml
.github/scripts/: check_docker_image_versions.sh  get_custom_image_build_matrix.sh
.github/workflows/: analytics_ci.yml  analytics_migrations.yml  build_pcluster_amis.yml  check_docker_image_versions.yml  custom_docker_builds.yml  secrets_test.yaml  spack_ci_bridge.yml  spack_ci_bridge_docker.yml  terraform-drift-detection.yaml  terraform_deploy.yml  terraform_validate.yml  test.yml  test_building_only_changed.yml  validate-terraform.yaml  validate_staging_patches.yml
analytics/: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  results.txt  settings.py  setup.py  tox.ini
analytics/analytics/: __init__.py  build_timing_processor.py  celery.py  models.py  settings.py  urls.py  views.py  wsgi.py
analytics/dev/: .env.docker-compose  .env.docker-compose-native  django.Dockerfile  init-gitlab.sh
analytics/scripts/: run_migrations.sh
docs/: aws.md  deferred_pipelines.md  index.md  timeline.md  troubleshoot.md
docs/gitlab/: testing_scenarios.md
flux/production/: admissionregistration.k8s.io-v1-MutatingWebhookConfiguration-karpenter-defaulting.webhook.provisioners.karpenter.sh.yaml  admissionregistration.k8s.io-v1-ValidatingWebhookConfiguration-karpenter-validation.webhook.config.karpenter.sh.yaml  admissionregistration.k8s.io-v1-ValidatingWebhookConfiguration-karpenter-validation.webhook.provisioners.karpenter.sh.yaml  apps-v1-Deployment-karpenter-karpenter.yaml  apps-v1-Deployment-spack-spackbot-workers.yaml  apps-v1-Deployment-spack-spackbotdev-spack-io.yaml  apps-v1-Deployment-spack-spackbotdev-workers.yaml  batch-v1-CronJob-custom-gh-gl-sync.yaml  batch-v1-CronJob-custom-opensearch-index-build-logs.yaml  builtin-v1-ConfigMap-gitlab-runner-arm-staging-patch.yaml  builtin-v1-ConfigMap-gitlab-runner-staging-patch.yaml  builtin-v1-ConfigMap-gitlab-runner-x86-staging-patch.yaml  builtin-v1-ConfigMap-karpenter-config-logging.yaml  builtin-v1-ConfigMap-karpenter-karpenter-global-settings.yaml  builtin-v1-ConfigMap-logging-fluent-bit-config.yaml  builtin-v1-Secret-custom-opensearch-index-build-logs.yaml  builtin-v1-Secret-karpenter-karpenter-cert.yaml  builtin-v1-Secret-logging-fluent-bit-secrets.yaml  builtin-v1-Secret-pipeline-spack-signing-key-encrypted.yaml  builtin-v1-Service-karpenter-karpenter.yaml  builtin-v1-ServiceAccount-karpenter-karpenter.yaml  builtin-v1-ServiceAccount-spack-spackbot-spack-io.yaml  builtin-v1-ServiceAccount-spack-spackbotdev-spack-io.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-arm-prot.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-arm-pub.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-arm-testing-pub.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-x86-prot.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-x86-pub.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-large-x86-testing-pub.yaml  helm.fluxcd.io-v1-HelmRelease-gitlab-runner-spack-package-signing.yaml  helm.fluxcd.io-v1-HelmRelease-monitoring-kube-prometheus-stack.yaml  karpenter.k8s.aws-v1alpha1-AWSNodeTemplate-default-default.yaml  karpenter.sh-v1alpha5-Provisioner-default-default.yaml  karpenter.sh-v1alpha5-Provisioner-default-testing.yaml  monitoring.coreos.com-v1-PrometheusRule-monitoring-kube-prometheus-stack-spack-custom-alerts.yaml  (+8 more)
gh-gl-sync/: CMakeLists.txt  Dockerfile  README.md  SpackCIBridge.py  entrypoint.sh  github-prs-to-gitlab.sh  install-packages.sh  requirements.txt  test_SpackCIBridge.py
gitlab-docker/: .env  README-ECP.md  README.md  README2.md  TRIGGERS.md  docker-compose.yml  vars  vars.sh
gitlab-postgres-clone/: ingest_job_logs.py  ingest_opensearch_logs.py  schema.sql
k8s-bootstrap/: bootstrap.sh  flux-chart.yaml  helm-operator-chart.yaml
kubernetes/: secrets.yaml  spack-io.yaml
scripts/: aws-auth.yaml  client-cert.sh  collect-metrics.pl  count-nodes.sh  dummyalert.sh  eks-control-plane-role.yaml  eks-node-group-with-key.yaml  eks-node-group-with-spot.yaml  eks-node-group.yaml  eks-node-instance-profile  eks-node-instance-profile.yaml  eks-security-group.yaml  eks-vpc.yaml  error-classification.py  generate_kustomizations.py  get-changed-files.sh  gitops-patch.py  helm-render  migrate-data.sh  migrate-pvc.py  migrate-to-sealed-secrets.py  restore-secret.py  s3-publish-stack-binaries.sh  secrets.py  update-public-key.sh  validate_staging_patches.py
secrets/: README.md  pyproject.toml
secrets/src/spack_secrets/: cli.py  curses.py  sealed.py  update.py  utils.py
secrets/tests/: __init__.py  test_invoke.py  test_update.py
spack-runner/: Chart.yaml  values.yaml
terraform/: .terraform.lock.hcl  README.md  cdash_db.tf  eks.tf  elasticache.tf  flux.tf  gitlab_db.tf  karpenter.tf  providers.tf  rds.tf  vpc.tf
terraform-bootstrap/: .terraform.lock.hcl  README.md  backend.tf  main.tf
(+1226 files in other folders)
